# 2d20-fallout-character-builder-rust

./: .env  .gitignore  Cargo.toml  README.md  config.toml  fallout_2d20.db
.resources/: db_schema_new.sql
.resources/db_loaders/: 0002_seed_content.sql
.resources/db_loaders/characters/: backgrounds.sql  creature_types.sql  origin_traits.sql  origins.sql  parties.sql  perks.sql  players.sql  skills.sql  special.sql  traits.sql
.resources/db_loaders/gameplay/: diseases.sql  sourcebooks.sql
.resources/db_loaders/items/: ammo.sql  ammo_variants.sql  apparel.sql  apparel_covers.sql  apparel_mod_available.sql  apparel_mod_perks.sql  apparel_mods.sql  apparel_slot_available.sql  apparel_slots.sql  apparel_types.sql  armor_legendary.sql  background_ammo.sql  background_apparel.sql  background_consumables.sql  background_gear.sql  background_robot_modules.sql  background_weapons.sql  body_locations.sql  character_types.sql  consumable_types.sql  consumables.sql  dam_effects.sql  (+14 more)
.sqlx/: query-19b8bdc614ff32dc23c73a07c3c03bc04ae5d9a4345394de1f6282c364f1e643.json  query-5ca260f8360362d17bd86d5ab897b0394df5881304428320a4fd43bc36290a99.json  query-93143fc4b30cc7fdbacaa6a457fb2954db0beb2c86855227f84d255e494b8421.json
fallout-2d20-core/: Cargo.toml
fallout-2d20-core/src/: background.rs  character.rs  items.rs  lib.rs  save.rs  skills.rs  special.rs
fallout-2d20-gui/: Cargo.toml  usr_config.toml
fallout-2d20-gui/src/: config.rs  db.rs  main.rs
fallout-2d20-gui/src/screens/: equipment.rs  main_menu.rs  mod.rs  new_character.rs  perks.rs  skills.rs  special.rs  stats.rs
(+18 files in other folders)
