[package]
name = "fallout-2d20-gui"
version = "0.1.3"
edition = "2024"

[dependencies]
fallout-2d20-core = { path = "../fallout-2d20-core" }

sdl2 = { version = "0.36.0", features = ["bundled"] }
imgui = "0.11.0"
imgui-sdl2 = "0.15.3"
imgui-opengl-renderer = "0.12.1"
glow = "0.13.0"
gl = "0.10.0"

tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "uuid"] }
dotenvy = "0.15.7"

dirs = "5"

serde_json = "1.0"
anyhow = "1.0"